--- a/KatlaSportNg/src/app/hive-management/lists/hive-section-list.component.html
+++ b/KatlaSportNg/src/app/hive-management/lists/hive-section-list.component.html
@@ -5,6 +5,7 @@
       <th scope="col">Id</th>
       <th scope="col">Name</th>
       <th scope="col">Code</th>
+      <th scope="col"></th>
     </thead>
     <tbody>
         <tr *ngFor="let hiveSection of hiveSections">
@@ -12,11 +13,17 @@
             <th scope="row">{{hiveSection.name}}</th>
             <th scope="row">{{hiveSection.code}}</th>
             <td>
-                <span class="btn-toolbar" role="toolbar" aria-label="Hive section action buttons" style="display: block; white-space:nowrap;">
-                    <div class="btn-group" role="group" aria-label="Edit group">
-                        <button routerLink="/section/{{hiveSection.id}}" type="button" class="btn btn-primary">Edit</button>
-                    </div>
-                </span>
+              <span class="btn-toolbar" role="toolbar" aria-label="Hive section action buttons" style="display: block; white-space:nowrap;">
+                  <div class="btn-group mr-2" role="group" aria-label="Delete group" *ngIf="!hiveSection.isDeleted" (click)="onDelete(hiveSection.id)">
+                    <button type="button" class="btn btn-danger" >Delete</button>
+                  </div>
+                  <div class="btn-group mr-2" role="group" aria-label="Undelete group group" *ngIf="hiveSection.isDeleted" (click)="onUndelete(hiveSection.id)">
+                    <button type="button" class="btn btn-primary">Undelete</button>
+                  </div>
+                  <div class="btn-group mr-2" role="group" aria-label="Edit group">
+                    <button routerLink="/section/{{hiveSection.id}}" type="button" class="btn btn-primary">Edit</button>
+                  </div>                   
+              </span>
             </td>
           </tr>
     </tbody>
