--- a/KatlaSportNg/src/app/hive-management/forms/hive-form.component.html
+++ b/KatlaSportNg/src/app/hive-management/forms/hive-form.component.html
@@ -8,17 +8,57 @@
     </div>
     <div class="form-group">
       <label for="name" id="nameLabel">Hive Name</label>
-      <input type="text" class="form-control" id="name" aria-describedby="nameLabel" minlength="4" maxlength="60" required [(ngModel)]="hive.name"
+      <input type="text" class="form-control" id="name" aria-describedby="nameLabel" minlength="4" maxlength="60"
+       required [(ngModel)]="hive.name"
         name="name" #name="ngModel">
       <div *ngIf="name.invalid && (name.dirty || name.touched)" class="alert alert-danger">
         <div *ngIf="name.errors.required">Hive Name is required.</div>
         <div *ngIf="name.errors.minlength">Hive Name must be at least 4 characters long.</div>
       </div>
     </div>
+    <div class="form-group">
+      <label for="code" id="codeLabel">Hive code</label>
+      <input type="text" class="form-control" id="code" aria-describedby="codeLabel" minlength="5" maxlength="5"
+       required [(ngModel)]="hive.code"
+        name="code" #code="ngModel">
+      <div *ngIf="code.invalid && (code.dirty || code.touched)" class="alert alert-danger">
+        <div *ngIf="code.errors.required">Hive code is required.</div>
+        <div *ngIf="code.errors.minlength">Hive code must be 5 characters long.</div>
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="address" id="addressLabel">Hive address</label>
+      <input type="text" class="form-control" id="address" aria-describedby="addressLabel" maxlength="300"
+       required [(ngModel)]="hive.address"
+        name="address" #address="ngModel">
+      <div *ngIf="address.invalid && (address.dirty || address.touched)" class="alert alert-danger">
+        <div *ngIf="address.errors.required">Hive address is required.</div>
+      </div>
+    </div>
     <div class="form-group" *ngIf='existed'>
       <label for="lastUpdated" id="lastUpdatedLabel">Last Update</label>
-      <input type="text" class="form-control" id="lastUpdated" aria-describedby="lastUpdatedLabel" required [(ngModel)]="hive.lastUpdated"
+      <input type="text" class="form-control" id="lastUpdated" aria-describedby="lastUpdatedLabel"
+       required [(ngModel)]="hive.lastUpdated"
         name="lastUpdated" #lastUpdated="ngModel" readonly>
+    </div>
+
+    <div class="btn-toolbar" role="toolbar" aria-label="Action buttons">
+      <div class="btn-group mr-4" role="group" aria-label="New group" (click)="onCancel()">
+        <button type="button" class="btn btn-primary">Back to hives list</button>
+      </div>
+      <div class="btn-group mr-2" role="group" aria-label="New group" 
+      *ngIf="!name.errors && !code.errors && !address.errors" (click)="onSubmit()">
+        <button type="button" class="btn btn-primary" ng-disabled="true">Save</button>
+      </div>
+      <div class="btn-group mr-2" role="group" aria-label="New group" *ngIf="existed && !hive.isDeleted" (click)="onDelete()">
+        <button type="button" class="btn btn-danger">Delete</button>
+      </div>
+      <div class="btn-group mr-2" role="group" aria-label="New group" *ngIf="existed && hive.isDeleted" (click)="onUndelete()">
+        <button type="button" class="btn btn-primary">Undelete</button>
+      </div>
+      <div class="btn-group mr-2" role="group" aria-label="New group" *ngIf="hive.isDeleted"(click)="onPurge()">
+        <button type="button" class="btn btn-primary">Purge</button>
+      </div>
     </div>
   </form>
 </div>
