--- a/KatlaSportNg/src/app/hive-management/forms/hive-form.component.html
+++ b/KatlaSportNg/src/app/hive-management/forms/hive-form.component.html
@@ -41,24 +41,26 @@
        required [(ngModel)]="hive.lastUpdated"
         name="lastUpdated" #lastUpdated="ngModel" readonly>
     </div>
-
-    <div class="btn-toolbar" role="toolbar" aria-label="Action buttons">
-      <div class="btn-group mr-4" role="group" aria-label="New group" (click)="onCancel()">
-        <button type="button" class="btn btn-primary">Back to hives list</button>
-      </div>
-      <div class="btn-group mr-2" role="group" aria-label="New group" 
-      *ngIf="!name.errors && !code.errors && !address.errors" (click)="onSubmit()">
-        <button type="button" class="btn btn-primary" ng-disabled="true">Save</button>
-      </div>
-      <div class="btn-group mr-2" role="group" aria-label="New group" *ngIf="existed && !hive.isDeleted" (click)="onDelete()">
-        <button type="button" class="btn btn-danger">Delete</button>
-      </div>
-      <div class="btn-group mr-2" role="group" aria-label="New group" *ngIf="existed && hive.isDeleted" (click)="onUndelete()">
-        <button type="button" class="btn btn-primary">Undelete</button>
-      </div>
-      <div class="btn-group mr-2" role="group" aria-label="New group" *ngIf="hive.isDeleted"(click)="onPurge()">
-        <button type="button" class="btn btn-primary">Purge</button>
-      </div>
-    </div>
   </form>
+  <div class="alert alert-warning"*ngIf="hasConflict">
+    Such hive is already exists! "Hive code" field must be unique.
+  </div>
+  <div class="btn-toolbar" role="toolbar" aria-label="Action buttons">
+    <div class="btn-group mr-4" role="group" aria-label="New group" (click)="onCancel()">
+      <button type="button" class="btn btn-primary">Back to hives list</button>
+    </div>
+    <div class="btn-group mr-2" role="group" aria-label="New group" 
+      *ngIf="!name.errors && !code.errors && !address.errors" (click)="onSubmit()">
+      <button type="button" class="btn btn-primary" ng-disabled="true">Save</button>
+    </div>
+    <div class="btn-group mr-2" role="group" aria-label="New group" *ngIf="existed && !hive.isDeleted" (click)="onDelete()">
+      <button type="button" class="btn btn-danger">Delete</button>
+    </div>
+    <div class="btn-group mr-2" role="group" aria-label="New group" *ngIf="existed && hive.isDeleted" (click)="onUndelete()">
+      <button type="button" class="btn btn-primary">Undelete</button>
+    </div>
+    <div class="btn-group mr-2" role="group" aria-label="New group" *ngIf="hive.isDeleted"(click)="onPurge()">
+      <button type="button" class="btn btn-primary">Purge</button>
+    </div>
+  </div>
 </div>
